# FtpSend

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: clientFtp.cpp  clientFtp.h  com_example_myapplication_MainActivity.h  my_log.h
app/src/main/java/com/example/myapplication/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
